/*
 * Copyright (C) 2020 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package com.android.permissioncontroller.permission.service;
option java_outer_classname = "AutoRevokePermissionsProto";

message PackageProto {
  optional int32 uid = 1;
  optional string package_name = 2;
  optional int64 last_time_visible = 4;
  optional int64 first_install_time = 5;
  repeated PermissionGroupProto groups = 6;
  repeated string implemented_services = 7;
}

message PermissionGroupProto {
  optional string group_name = 1;
  optional bool is_fixed = 2;
  optional bool is_any_granted_including_appop = 3;
  optional bool is_granted_by_default = 4;
  optional bool is_granted_by_role = 5;
  optional bool is_user_sensitive = 6;
  optional bool is_auto_revoked = 7;
}

message AutoRevokedPackageProto {
  optional string package_name = 1;
  repeated string revoked_groups = 2;
}

message PerUserProto {
  optional int32 user_id = 1;
  repeated PackageProto packages = 2;
}

message TeamFoodSettingsProto {
  optional bool enabled_for_pre_R_apps = 1;
  optional int64 unused_threshold_millis = 2;
  optional int64 check_frequency_millis = 3;
}

message AutoRevokePermissionsDumpProto {
  repeated PerUserProto users = 1;

  optional TeamFoodSettingsProto teamfood_settings = 2;
}
